Fix word-wrap on long links when zoomed

--- a/app/assets/stylesheets/frontend/layout.scss
+++ b/app/assets/stylesheets/frontend/layout.scss
@@ -628,6 +628,7 @@ header.page-header aside .inner {
     &.sidebar-helpline {
       a {
         text-decoration: underline;
+        overflow-wrap: break-word;
       }
     }
   }
